refactor singup page with testcases

--- a/frontend/src/app/sign-up/sign-up.component.html
+++ b/frontend/src/app/sign-up/sign-up.component.html
@@ -12,11 +12,10 @@
           </span>
         </div>
         <input type="text" class="form-control" placeholder="Username" formControlName="username"
-            [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
-        <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-          <div *ngIf="f.username.errors.required">Username is required.</div>
-          <div *ngIf="f.username.errors.tooShort">Username should be at least 6 characters.</div>
-          <div *ngIf="f.username.errors.mustNotContain">Username cannot contain {{'{ or }'}} character.</div>
+            [ngClass]="{'is-invalid': isInvalid(f.username) }">
+        <div *ngIf="isInvalid(f.username)" class="invalid-feedback">
+          <div *ngIf="f.username.errors.required">Username is required. </div>
+          <div *ngIf="f.username.errors.minlength">Username must be at least 6 characters long.</div>
         </div>
       </div>
     </div>
@@ -29,11 +28,10 @@
           </span>
         </div>
         <input type="text" class="form-control" placeholder="Email@email.net" formControlName="email"
-            [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
-        <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+            [ngClass]="{ 'is-invalid': isInvalid(f.email) }">
+        <div *ngIf="isInvalid(f.email)" class="invalid-feedback">
           <div *ngIf="f.email.errors.required">Email is required.</div>
-          <div *ngIf="f.email.errors.tooShort">Email should be at least 5 characters.</div>
-          <div *ngIf="f.email.errors.mustContain">Email must have @ character.</div>
+          <div *ngIf="f.email.errors.email">Email must have @ between characters.</div>
         </div>
       </div>
     </div>
@@ -46,11 +44,10 @@
           </span>
         </div>
         <input type="password" class="form-control" placeholder="Password" formControlName="password"
-            [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
-        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+            [ngClass]="{ 'is-invalid': isInvalid(f.password) }">
+        <div *ngIf="isInvalid(f.password)" class="invalid-feedback">
           <div *ngIf="f.password.errors.required">Password is required.</div>
-          <div *ngIf="f.password.errors.mustContain">Password must have at least 8 characters with at least one capital letter, at least one lower case letter and at least one number.</div>
-          <div *ngIf="f.password.errors.mustNotContain">Password cannot contain {{'{ or }'}} character.</div>
+          <div *ngIf="f.password.errors.pattern">Password cannot contain {{'{ or }'}} character and must have at least 8 characters with at least one capital letter, at least one lower case letter and at least one number.</div>
         </div>
       </div>
     </div>
@@ -63,10 +60,9 @@
           </span>
         </div>
         <input type="password" class="form-control" placeholder="Confirm Password" formControlName="confirm"
-            [ngClass]="{ 'is-invalid': submitted && f.confirm.errors }">
-        <div *ngIf="submitted && f.confirm.errors" class="invalid-feedback">
-          <div *ngIf="f.confirm.errors.required">Confirm is required.</div>
-          <div *ngIf="f.confirm.errors.notSame">Password confirmation fails.</div>
+            [ngClass]="{ 'is-invalid': signUpForm.errors?.notSame }">
+        <div *ngIf="signUpForm.errors?.notSame" class="invalid-feedback">
+          <div *ngIf="signUpForm.errors?.notSame">Password confirmation fails.</div>
         </div>
       </div>
     </div>
@@ -74,18 +70,16 @@
     <div class="form-group">
       <label class="checkbox-inline">
         <input type="checkbox" formControlName="accept" required>
-        I accept the <a routerLink="#" class="text-primary">Terms of Use</a>
-        &amp; <a routerLink="#" class="text-primary">Privacy Policy</a>
-        <div *ngIf="submitted">
-          <div *ngIf="signUpForm.hasError('required', 'accept')" >
-            <span class="text-danger small">Acceptance is required</span>
-          </div>
+            I accept the <a routerLink="#" class="text-primary">Terms of Use</a>
+            &amp; <a routerLink="#" class="text-primary">Privacy Policy</a>
+        <div *ngIf="isInvalid(f.accept)">
+          <div *ngIf="f.accept.errors.required" class="text-danger">Acceptance is required.</div>
         </div>
       </label>
     </div>
 
     <div class="form-group">
-      <button type="submit" [disabled]="loading" class="btn btn-success btn-block">Sign Up</button>
+      <button type="submit" [disabled]="signUpForm.invalid || pending" class="btn btn-success btn-block">Sign Up</button>
     </div>
 
     <div *ngIf="error" class="alert alert-danger">The username already exists. Please use a different username</div>
