--- a/frontend/src/app/page-not-found/page-not-found.component.html
+++ b/frontend/src/app/page-not-found/page-not-found.component.html
@@ -1,3 +1,13 @@
-<p>
-  page-not-found works!
-</p>
+<div class="container">
+    <div class="text-center">
+      <div class="error-template">
+        <h1>Oops!</h1>
+        <h2>404 Not Found</h2>
+        <p>Sorry, Requested page not found.</p>
+        <p>It may be under construction!</p>
+        <div class="error-actions">
+            <a routerLink="/" class="btn btn-outline-dark"><i class="fas fa-home"></i> Take Me Home</a>
+        </div>
+      </div>
+    </div>
+</div>
