--- a/frontend/src/app/user-profile/user-profile.component.html
+++ b/frontend/src/app/user-profile/user-profile.component.html
@@ -4,7 +4,7 @@
     <ngb-tab title="Basic">
       <ng-template ngbTabContent>
         <div class="text-center m-1">
-          <img src="{{userImageUri}}" class="img-thumbnail" onError="this.src='/assets/img/emptyAvatar.png';">
+          <img src="{{userImageUri}}" class="img-thumbnail" onError="this.src='/assets/img/icon-user-128.png';">
         </div>
 
         <div *ngIf="isReadonly==false" class="input-group">
