--- a/frontend/src/app/user-ref/user-ref.component.html
+++ b/frontend/src/app/user-ref/user-ref.component.html
@@ -1,10 +1,14 @@
-<div class="btn-group dropright">
-  <img class="icon dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-    src="{{imgServerUrl + userRefId}}" onError="this.src='/assets/img/img60x60.jpg';">
+<div  class="btn-group dropright">
+
+  <img class="icon dropdown-toggle" [ngClass]="{ 'disabled' : !canShowMenu() }" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+    src="{{imgPath + userRefId}}" onError="this.src='/assets/img/icon-user-64.png';">
+
   <div class="dropdown-menu">
     <a class="dropdown-item" routerLink="/user/profile/{{userRefId}}">Profile</a>
-    <a *ngIf="!isFollowee" class="dropdown-item" (click)="postRelation(true)">Follow</a>
-    <a *ngIf="isFollowee" class="dropdown-item" (click)="postRelation(false)">Unfollow</a>
+    <a *ngIf="!hasFollowee()" class="dropdown-item" (click)="postRelation(true)">Follow</a>
+    <a *ngIf="hasFollowee()" class="dropdown-item" (click)="postRelation(false)">Unfollow</a>
     <a class="dropdown-item" (click)="sendMessage()">Send Message</a>
   </div><!-- class="btn-group dropright"> -->
+
 </div>
+
