--- a/frontend/src/app/notification/notification.component.html
+++ b/frontend/src/app/notification/notification.component.html
@@ -2,7 +2,7 @@
   <div *ngFor="let noti of notifications; index as i" class="noti">
     <ngb-alert type="primary" (click)="onClick(i)" (close)="onDelete(i)">
       <strong>{{noti.authorName}} </strong>
-      {{toString(noti)}}
+      {{noti.toString()}}
       <small class="text-muted">{{noti.time.created}}</small>
     </ngb-alert>
   </div>
