--- a/frontend/src/app/content-viewer/content-viewer.component.html
+++ b/frontend/src/app/content-viewer/content-viewer.component.html
@@ -3,16 +3,15 @@
   <div class="h3">{{content.title}}</div>
 
   <div class="row">
-    <div class="m-2 p-1 row no-gutters align-items-center col-sm" >
+    <div class="m-2 p-1 row no-gutters align-items-center col-sm">
       <div class="col-2">
         <app-user-ref [userRefId]="content.authorId" [userRefName]="content.authorName"></app-user-ref>
       </div>
       <div class="col pl-2">
-        <span>@{{content.authorName}}</span>
-        <p class="m-0"><small>{{content.cruTime.created.toLocalDate()}}</small></p>
+        <div class=""><i class="far fa-user"></i> {{content.authorName}}</div>
+        <div class="text-muted"><i class="far fa-calendar-alt"></i> {{content.cruTime.created.toLocalDate()}}</div>
       </div>
     </div>
-
     <div class="m-2 p-1 col-sm">
       <app-reputation [typeName]="'Content'" [authorId]="content.authorId" [idCid]="content.idCid" [reputation]="content.reputation"></app-reputation>
     </div>
@@ -33,7 +32,11 @@
   </div>
   <div class="ml-2">{{content.sentences}}</div>
 
-  <span class="ml-2" *ngFor="let tag of content.tags; index as i">#{{tag}} </span>
+  <div class="h5 my-3">Tags</div>
+  <div class="ml-2" >
+    <button type="button" class="btn btn-outline-primary border-0 rounded-lg p-0 mr-1"
+        (click)="onTag(tag)" *ngFor="let tag of content.tags; index as i">#{{tag}}</button>
+  </div>
 
   <div *ngIf="user.isMe(content.authorId)" class="border rounded my-1 p-1">
     <button type="button" (click)="onEdit()" class="btn btn-outline-secondary">
@@ -44,6 +47,7 @@
     </button>
   </div>
 
+  <div class="h5 my-3">Reviews</div>
   <div class="my-2">
     <app-review [content]="content"></app-review>
   </div>
