--- a/frontend/src/app/topbar/topbar.component.html
+++ b/frontend/src/app/topbar/topbar.component.html
@@ -48,8 +48,9 @@
       <li *ngIf="!user.isGuest()" class="nav-item dropdown no-arrow mx-1">
         <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-bell fa-fw"></i>
-          <!-- Counter - Alerts -->
+          <!-- TODO
           <span class="badge badge-danger badge-counter">N</span>
+          -->
         </a>
         <!-- Dropdown - Alerts -->
         <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="alertsDropdown">
@@ -65,8 +66,9 @@
       <li *ngIf="!user.isGuest()" class="nav-item dropdown no-arrow mx-1">
         <a class="nav-link dropdown-toggle" href="#" id="messagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-envelope fa-fw"></i>
-          <!-- TODO show only if there are unreaded Items - Messages -->
+          <!-- TODO show only if there are unreaded Items - Messages
           <span class="badge badge-danger badge-counter">N</span>
+          -->
         </a>
         <!-- Dropdown - Message -->
         <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="messagesDropdown">
