--- a/frontend/src/app/sign-in/sign-in.component.html
+++ b/frontend/src/app/sign-in/sign-in.component.html
@@ -4,8 +4,8 @@
   <hr class="my-4"/>
 
   <div class="text-center">
-      <a href="http://localhost:9093/uaa/login/facebook" class="btn btn-primary btn-block"><i class="fab fa-facebook"></i> Sign in with <b>Facebook</b></a>
-      <a href="./login/google" class="btn btn-danger btn-block"><i class="fab fa-google"></i> Sign in with <b>Google</b></a>
+      <a routerLink="/page-not-found" class="btn btn-primary btn-block"><i class="fab fa-facebook"></i> Sign in with <b>Facebook</b></a>
+      <a routerLink="/page-not-found" class="btn btn-danger btn-block"><i class="fab fa-google"></i> Sign in with <b>Google</b></a>
   </div>
 
   <hr class="my-4"/>
@@ -50,7 +50,7 @@
 
   <div class="d-flex justify-content-around">
     <label><input type="checkbox"> Remember me</label>
-    <a routerLink="/" class="text-success">Forgot Password?</a>
+    <a routerLink="/page-not-found" class="text-success">Forgot Password?</a>
   </div>
 </div>
 
